feat(submodule): add submodule relife-client

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = src/browser
 	url = https://github.com/duydang2311/relife-browser
 	branch = main
+[submodule "src/client"]
+	path = src/client
+	url = https://github.com/duydang2311/relife-client
+	branch = main
