--- a/resources/relife/resource.cfg
+++ b/resources/relife/resource.cfg
@@ -1,6 +1,6 @@
 type: csharp,
 main: server/ReLIFE.dll,
-client-main: client/src/index.js,
+client-main: client/index.js,
 client-files: [
 	client/*,
 ],
