--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = src/shared
 	url = https://github.com/duydang2311/relife-shared.git
 	branch = main
+[submodule "src/frontend"]
+	path = src/frontend
+	url = git@github.com:duydang2311/relife-frontend.git
